# ChmcuInit

./: .gitignore  App.xaml  App.xaml.cs  BaseObject.cpp  BaseObject.h  CMakeCache.txt  CMakeLists.txt  ChmcuInit.csproj  ChmcuInit.pri  ChmcuInit.pro  ChmcuInit.sln  ChmcuInit_zh_CN.ts  Debug.cpp  Debug.h  FormHome.cpp  FormHome.h  FormHome.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  cmake_install.cmake  main.cpp  qml.qrc
Assets/: Assets.qrc  no_mcu.html
ChmcuInit/: App.xaml  App.xaml.cs  ChmcuInit.csproj  ChmcuInit.pro  ChmcuInit.pro.user.22  ChmcuInit.pro.user.4.10-pre1  ChmcuInit.sln  main.cpp  master.cpp  master.h  master.ui  res.qrc
ChmcuInit/ChmcuInit/: App.xaml  App.xaml.cs  ChmcuInit.csproj  MainWindow.xaml  MainWindow.xaml.cs
ChmcuInit/ChmcuInit/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ChmcuInit/Code/: CodeAnnotationt.cpp  CodeAnnotationt.h  CodeCreateDriver.cpp  CodeCreateDriver.h  CodeDriver.cpp  CodeDriver.h  CodeFunction.cpp  CodeFunction.h
ChmcuInit/Data/: families.xml
ChmcuInit/Dialog/: DialogProject.cpp  DialogProject.h
ChmcuInit/Keil/: KeilXml.cpp  KeilXml.h
ChmcuInit/Mcu/: McuChip.cpp  McuChip.h  McuPin.cpp  McuPin.h  McuScene.cpp  McuScene.h  McuTssop24.cpp  McuTssop24.h  McuXml.cpp  McuXml.h
ChmcuInit/Models/: BindingProxy.cs  ChipItemsModel.cs  McuFeature.cs  NotEmptyValidationRule.cs  ViewChipConfigChooseChipDataModel.cs  ViewChipConfigChooseChipSelectableModel.cs
ChmcuInit/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
ChmcuInit/Service/: IXMLFamiliesData.cs  XMLFamilies.cs
ChmcuInit/ViewModels/: MainWindowViewModel.cs  StartViewViewModel.cs  ViewChipConfigChooseChipFeaturesViewModel.cs  ViewChipConfigChooseChipViewModel.cs  ViewChipConfigChooseViewModel.cs  ViewChipConfigViewModel.cs  ViewStartViewModel.cs
ChmcuInit/Views/: ChipConfigView.xaml  ChipConfigView.xaml.cs  MainWindow.xaml  StartView.xaml  StartView.xaml.cs  ViewChipConfig.xaml  ViewChipConfig.xaml.cs  ViewChipConfigChoose.xaml  ViewChipConfigChoose.xaml.cs  ViewChipConfigChooseBoard.xaml  ViewChipConfigChooseBoard.xaml.cs  ViewChipConfigChooseChip.xaml  ViewChipConfigChooseChip.xaml.cs  ViewChipConfigChooseChipFeatures.xaml  ViewChipConfigChooseChipFeatures.xaml.cs  ViewStart.xaml  ViewStart.xaml.cs
ChmcuInit/Window/: WindowPin.cpp  WindowPin.h
ChmcuInit/code/: code_use.cpp  code_use.h
ChmcuInit/keil/: keil_xml.cpp  keil_xml.h
ChmcuInit/mcu/: mcu.cpp  mcu.h  mcu_chip.cpp  mcu_chip.h  mcu_pin.cpp  mcu_pin.h  mcu_scene.cpp  mcu_scene.h  mcu_tssop24.cpp  mcu_tssop24.h  mcu_xml.cpp  mcu_xml.h
ChmcuInit/res/db/mcu/HDSC/HC32/HC32F002/: HC32F002D4P8.xml
ChmcuInit/res/db/sys/: code.xml
ChmcuInit/res/qss/: mcu_pin_high.qss
ChmcuInit/window/: window_pin.cpp  window_pin.h
Choose/: DialogChooseMcu.cpp  DialogChooseMcu.h  DialogChooseMcu.ui  TableWidgetMcu.cpp  TableWidgetMcu.h  TextBrowserReadMe.cpp  TextBrowserReadMe.h  TreeWidgetChooseMcu.cpp  TreeWidgetChooseMcu.h
Coder/: CoderStreamWriter.cpp  CoderStreamWriter.h
Coder/Hal/: CoderHalIo.cpp  CoderHalIo.h
Config/: GraphicsView.cpp  GraphicsView.h
Config/Mcu/: ComboBoxMcuPinAttribute.cpp  ComboBoxMcuPinAttribute.h  FormMcuConfig.cpp  FormMcuConfig.h  FormMcuConfig.ui  FormMcuPinAttribute.cpp  FormMcuPinAttribute.h  FormMcuPinAttribute.ui  TreeWidgetChooseIp.cpp  TreeWidgetChooseIp.h  TreeWidgetMcuChooseFunction.cpp  TreeWidgetMcuChooseFunction.h
Config/Mcu/GPIO/: ComboBoxGpioAttribute.cpp  ComboBoxGpioAttribute.h  FormGpio.cpp  FormGpio.h  FormGpio.ui  FormGpioAttribute.cpp  FormGpioAttribute.h  FormGpioAttribute.ui  TableWidgetGpio.cpp  TableWidgetGpio.h
Config/View/: LabelComment.cpp  LabelComment.h  LabelPin.cpp  LabelPin.h  WidgetLQFP48.cpp  WidgetLQFP48.h  WidgetLQFP48.ui
Model/: XmlFamilyModel.cpp  XmlFamilyModel.h  XmlFileProjectModel.cpp  XmlFileProjectModel.h  XmlIoModel.cpp  XmlIoModel.h  XmlIpModel.cpp  XmlIpModel.h  XmlPinModel.cpp  XmlPinModel.h
Project/: DialogSaveFile.cpp  DialogSaveFile.h  DialogSaveFile.ui  FileProject.cpp  FileProject.h
Properties/: Resources.Designer.cs  Settings.Designer.cs
ViewModels/: MainWindowViewModel.cs
Views/: MainWindow.xaml  MainWindow.xaml.cs
Wrapper/: cmi_object.cpp  cmi_object.h
cpps/: main.cpp
qmls/: main.qml  qtquickcontrols2.conf
src/: src.pro
src/ChmcuInit/: BaseObject.cpp  BaseObject.h  ChmcuInit.pro  DialogChooseBoard.cpp  DialogChooseBoard.h  DialogChooseBoard.ui  DialogChooseMcu.cpp  DialogChooseMcu.h  DialogChooseMcu.ui  FileManage.cpp  FileManage.h  FormHome.cpp  FormHome.h  FormHome.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.h  TableWidegtMcuInfo.cpp  TableWidegtMcuInfo.h  TreeWidgetChooseMcuBoard.cpp  TreeWidgetChooseMcuBoard.h  XmlRead.cpp  XmlRead.h  XmlWrite.cpp  XmlWrite.h  debug.cpp  debug.h  dialog_choose_board.cpp  dialog_choose_board.h  dialog_choose_board.ui  dialog_choose_mcu.cpp  dialog_choose_mcu.h  dialog_choose_mcu.ui  file_manage.cpp  file_manage.h  form_home_widget.cpp  form_home_widget.h  form_home_widget.ui  main.cpp  (+14 more)
src/ChmcuInit/FormChipConfig/: FormChipConfig.cpp  FormChipConfig.h  FormChipConfig.ui  GraphicsViewMcu.cpp  GraphicsViewMcu.h  TreeWidgetChooseFunction.cpp  TreeWidgetChooseFunction.h  TreeWidgetChooseIp.cpp  TreeWidgetChooseIp.h
src/ChmcuInit/FormChipConfig/ChipView/: LabelPin.cpp  LabelPin.h  WidgetLQFP48.cpp  WidgetLQFP48.h  WidgetLQFP48.ui
src/ChmcuInit/FormChipConfig/Parameter/STM32/: FormPinAttribute.cpp  FormPinAttribute.h  FormPinAttribute.ui  FormSTM32PeripheralsModeConfig.cpp  FormSTM32PeripheralsModeConfig.h  FormSTM32PeripheralsModeConfig.ui  STM32Model.h  STM32XmlRead.cpp  STM32XmlRead.h
src/ChmcuInit/assets/: no_mcu_md.md  readme.html  readme.md
src/ChmcuInit/db/families/: families.xml
src/ChmcuInit/demo/: demo_chip.cpp  demo_chip.h
translations/: translations.pro
